Fix LazyInitializationException in Admin and Secretary views, add integration tests