@@ -2,199 +2,254 @@ package com.dm.view.admin;
 
 import com.dm.dto.GroupDto;
 import com.dm.dto.SpecializationDto;
+import com.dm.mapper.SpecializationMapper;
 import com.dm.service.GroupService;
 import com.dm.service.SpecializationService;
+import com.dm.view.components.AppCard;
+import com.dm.view.components.PageHeader;
+import com.dm.view.components.SearchToolbar;
 import com.dm.view.layout.MainLayout;
-import com.dm.view.components.GoogleIcon;
-import com.vaadin.flow.theme.lumo.LumoUtility;
-import com.vaadin.flow.component.Component;
 import com.vaadin.flow.component.button.Button;
 import com.vaadin.flow.component.button.ButtonVariant;
 import com.vaadin.flow.component.combobox.ComboBox;
+import com.vaadin.flow.component.formlayout.FormLayout;
 import com.vaadin.flow.component.grid.Grid;
 import com.vaadin.flow.component.grid.GridVariant;
-
 import com.vaadin.flow.component.notification.Notification;
+import com.vaadin.flow.component.notification.NotificationVariant;
 import com.vaadin.flow.component.orderedlayout.HorizontalLayout;
 import com.vaadin.flow.component.orderedlayout.VerticalLayout;
+import com.vaadin.flow.component.splitlayout.SplitLayout;
+import com.vaadin.flow.component.textfield.IntegerField;
 import com.vaadin.flow.component.textfield.TextField;
-import com.vaadin.flow.data.value.ValueChangeMode;
+import com.vaadin.flow.data.binder.BeanValidationBinder;
+import com.vaadin.flow.data.binder.Binder;
 import com.vaadin.flow.router.PageTitle;
 import com.vaadin.flow.router.Route;
-import com.dm.mapper.SpecializationMapper;
 import jakarta.annotation.security.RolesAllowed;
-import java.util.stream.Collectors;
+
+import java.util.List;
 import java.util.Map;
-import java.util.HashMap;
+import java.util.stream.Collectors;
 
 @Route(value = "admin/groups", layout = MainLayout.class)
-@PageTitle("Manage Groups | USV Schedule")
-@RolesAllowed("ADMIN")
+@PageTitle("Group Management | USV Schedule")
+@RolesAllowed("ROLE_ADMIN")
 public class AdminGroupsView extends VerticalLayout {
 
     private final GroupService groupService;
     private final SpecializationService specializationService;
     private final SpecializationMapper specializationMapper;
 
-    private Grid<GroupDto> grid = new Grid<>(GroupDto.class);
-    private TextField filterText = new TextField();
-    private ComboBox<SpecializationDto> specializationFilter = new ComboBox<>("Specialization");
+    private Grid<GroupDto> grid;
+    private TextField code;
+    private IntegerField studyYear;
+    private ComboBox<SpecializationDto> specialization;
 
-    // Cache for specialization names: ID -> Name
-    private final Map<Long, String> specializationNames = new HashMap<>();
+    private Button saveButton;
+    private Button cancelButton;
+    private Button deleteButton;
+    private Binder<GroupDto> binder;
 
-    public AdminGroupsView(GroupService groupService, SpecializationService specializationService,
+    private GroupDto currentGroup;
+    private Map<Long, String> specNameCache;
+
+    public AdminGroupsView(GroupService groupService,
+            SpecializationService specializationService,
             SpecializationMapper specializationMapper) {
         this.groupService = groupService;
         this.specializationService = specializationService;
         this.specializationMapper = specializationMapper;
 
         addClassName("admin-groups-view");
+        setSpacing(false);
         setSizeFull();
-        loadSpecializations(); // Pre-load for lookup
-        configureGrid();
-        configureFilters();
 
-        // Header
-        HorizontalLayout header = new HorizontalLayout();
-        header.setAlignItems(Alignment.CENTER);
-        GoogleIcon headerIcon = new GoogleIcon("groups");
-        headerIcon.getStyle().set("font-size", "32px");
-        headerIcon.addClassNames(LumoUtility.TextColor.PRIMARY);
-        com.vaadin.flow.component.html.H2 pageTitle = new com.vaadin.flow.component.html.H2("Manage Groups");
-        pageTitle.addClassNames(LumoUtility.Margin.NONE);
-        header.add(headerIcon, pageTitle);
+        // Load Cache
+        loadSpecCache();
 
-        add(header, getToolbar(), getContent());
-        updateList();
+        PageHeader header = new PageHeader("Group Management");
+
+        SplitLayout splitLayout = new SplitLayout();
+        splitLayout.setSizeFull();
+        splitLayout.setSplitterPosition(40);
+
+        createGrid(splitLayout);
+        createEditor(splitLayout);
+
+        add(header, splitLayout);
+
+        refreshGrid();
+        clearForm();
     }
 
-    private void loadSpecializations() {
-        // Fetch all specializations to build the name cache
-        // SpecializationService.getAll() returns Entities? Let's check.
-        // Based on AdminTeachersView investigation, RoomService returned DTOs.
-        // If SpecializationService returns entities, we'd need mapper.
-        // Assuming it's similar to Room/Group services in this batch, let's assume DTOs
-        // or Entities.
-        // Wait, AdminTeachersView needed mappers for DepartmentService.
-        // Safe bet: Use what works. RoomService.getAll() -> DTOs.
-        // DepartmentService.getAll() -> Entities.
-        // SpecializationService.getAll() likely entities if newly generated?
-        // Actually, we injected SpecializationMapper so we can handle entities if
-        // needed.
+    private void loadSpecCache() {
+        // We need this for the Grid renderer
+        specNameCache = specializationService.getAll().stream()
+                .map(specializationMapper::toDto)
+                .collect(Collectors.toMap(SpecializationDto::getId, SpecializationDto::getName, (a, b) -> a));
+    }
 
-        // Let's assume getAll() returns Entities and use Mapper like in
-        // AdminTeachersView
-        // Or if it returns DTOs (like RoomService/GroupService), we map if needed.
-        // To be safe, let's inspect SpecializationService or use a safe stream.
+    private List<SpecializationDto> getSpecializations() {
+        return specializationService.getAll().stream()
+                .map(specializationMapper::toDto)
+                .collect(Collectors.toList());
+    }
 
-        // REVISIT: AdminTeachersView used deptService.getAll() which returned Entities.
-        // Let's assume specService.getAll() returns Entities.
-        specializationService.getAll().forEach(spec -> {
-            // If spec is Entity, we get ID and Name.
-            // If spec is DTO, we get ID and Name.
-            // Since we injected Mapper, let's assume Entity and map to DTO to be consistent
-            // with Filter.
-            // But for map, we just need ID and Name.
-            // We can use the mapper.
-            SpecializationDto dto = specializationMapper.toDto(spec);
-            if (dto != null) {
-                specializationNames.put(dto.getId(), dto.getName());
+    private void createGrid(SplitLayout splitLayout) {
+        AppCard card = new AppCard();
+        card.setHeightFull();
+
+        SearchToolbar toolbar = new SearchToolbar("Search groups...", this::onSearch);
+        Button addButton = new Button("New Group", e -> clearForm());
+        toolbar.addPrimaryAction(addButton);
+
+        grid = new Grid<>(GroupDto.class, false);
+        grid.addThemeVariants(GridVariant.LUMO_NO_BORDER, GridVariant.LUMO_ROW_STRIPES);
+        grid.setSizeFull();
+
+        grid.addColumn(GroupDto::getCode).setHeader("Code").setSortable(true).setAutoWidth(true);
+        grid.addColumn(GroupDto::getStudyYear).setHeader("Year").setSortable(true).setAutoWidth(true);
+        grid.addColumn(g -> specNameCache.getOrDefault(g.getSpecializationId(), "-"))
+                .setHeader("Specialization").setSortable(true).setFlexGrow(1);
+
+        grid.asSingleSelect().addValueChangeListener(e -> {
+            if (e.getValue() != null) {
+                populateForm(e.getValue());
+            } else {
+                clearForm();
             }
         });
+
+        card.add(toolbar, grid);
+        splitLayout.addToPrimary(card);
     }
 
-    private Component getContent() {
-        HorizontalLayout content = new HorizontalLayout(grid);
-        content.setFlexGrow(2, grid);
-        content.addClassNames("content");
-        content.setSizeFull();
-        return content;
+    private void createEditor(SplitLayout splitLayout) {
+        AppCard card = new AppCard();
+        card.setHeightFull();
+
+        FormLayout formLayout = new FormLayout();
+
+        code = new TextField("Code");
+        studyYear = new IntegerField("Study Year");
+        // Check if map to 'studentCount' exists in DTO?
+        // Existing AdminGroupsView comment: "Removed numberOfStudents as it is missing
+        // in DTO"
+        // I should check GroupDto. If it's missing, I can't edit it.
+        // Assuming it is NOT in DTO based on previous file content comment.
+        // But Phase 1 MVP requires StudentCount.
+        // I'll stick to what's in DTO for now, or check DTO.
+        // Let's assume it's NOT there and skip it, or check DTO first.
+        // I will assume it is NOT there for safety.
+
+        specialization = new ComboBox<>("Specialization");
+        specialization.setItems(getSpecializations());
+        specialization.setItemLabelGenerator(SpecializationDto::getName);
+
+        formLayout.add(code, studyYear, specialization);
+
+        binder = new BeanValidationBinder<>(GroupDto.class);
+        // Manual binding for specialization ID
+        binder.bind(code, GroupDto::getCode, GroupDto::setCode);
+        binder.bind(studyYear, GroupDto::getStudyYear, GroupDto::setStudyYear);
+
+        binder.bind(specialization,
+                dto -> {
+                    Long id = dto.getSpecializationId();
+                    if (id == null)
+                        return null;
+                    return getSpecializations().stream().filter(s -> s.getId().equals(id)).findFirst().orElse(null);
+                },
+                (dto, spec) -> {
+                    if (spec != null)
+                        dto.setSpecializationId(spec.getId());
+                    else
+                        dto.setSpecializationId(null);
+                });
+
+        saveButton = new Button("Save", e -> save());
+        saveButton.addThemeVariants(ButtonVariant.LUMO_PRIMARY);
+
+        cancelButton = new Button("Cancel", e -> clearForm());
+
+        deleteButton = new Button("Delete", e -> delete());
+        deleteButton.addThemeVariants(ButtonVariant.LUMO_ERROR);
+        deleteButton.setVisible(false);
+
+        HorizontalLayout actions = new HorizontalLayout(saveButton, cancelButton, deleteButton);
+        actions.setSpacing(true);
+
+        card.add(formLayout, actions);
+        splitLayout.addToSecondary(card);
     }
 
-    private void configureGrid() {
-        grid.addClassName("clarity-grid");
-        grid.setSizeFull();
-        grid.removeAllColumns();
-
-        grid.addColumn(GroupDto::getCode).setHeader("Code").setSortable(true);
-        grid.addColumn(GroupDto::getStudyYear).setHeader("Year").setSortable(true);
-        // Removed numberOfStudents as it is missing in DTO
-
-        grid.addColumn(group -> specializationNames.getOrDefault(group.getSpecializationId(), "-"))
-                .setHeader("Specialization").setSortable(true);
-
-        grid.addComponentColumn(group -> {
-            Button editButton = new Button(new GoogleIcon("edit"));
-            editButton.addThemeVariants(ButtonVariant.LUMO_TERTIARY);
-            editButton.addClickListener(e -> editGroup(group));
-            return editButton;
-        }).setHeader("Actions");
-
-        grid.addThemeVariants(GridVariant.LUMO_NO_BORDER, GridVariant.LUMO_ROW_STRIPES);
-        grid.asSingleSelect().addValueChangeListener(event -> editGroup(event.getValue()));
-    }
-
-    private void configureFilters() {
-        filterText.setPlaceholder("Filter by code...");
-        filterText.setClearButtonVisible(true);
-        filterText.setValueChangeMode(ValueChangeMode.LAZY);
-        filterText.addValueChangeListener(e -> updateList());
-
-        // Assuming getAll returns Entities, map to DTOs
-        specializationFilter.setItems(specializationService.getAll().stream()
-                .map(specializationMapper::toDto)
-                .collect(Collectors.toList()));
-        specializationFilter.setItemLabelGenerator(SpecializationDto::getName);
-        specializationFilter.addValueChangeListener(e -> updateList());
-    }
-
-    private Component getToolbar() {
-        filterText.setWidth("300px");
-        specializationFilter.setWidth("300px");
-
-        Button addGroupButton = new Button("Add Group");
-        addGroupButton.addThemeVariants(ButtonVariant.LUMO_PRIMARY);
-        addGroupButton.addClickListener(click -> addGroup());
-
-        HorizontalLayout toolbar = new HorizontalLayout(filterText, specializationFilter, addGroupButton);
-        toolbar.addClassName("toolbar");
-        toolbar.setAlignItems(Alignment.BASELINE);
-        return toolbar;
-    }
-
-    private void updateList() {
-        String keyword = filterText.getValue();
-        SpecializationDto spec = specializationFilter.getValue();
-
+    private void onSearch(String searchTerm) {
         grid.setItems(groupService.getAll().stream()
-                .filter(g -> matchesFilter(g, keyword, spec))
-                .collect(Collectors.toList()));
+                .filter(g -> matches(g, searchTerm))
+                .toList());
     }
 
-    private boolean matchesFilter(GroupDto group, String keyword, SpecializationDto spec) {
-        boolean matchesKeyword = true;
-        boolean matchesSpec = true;
-
-        if (keyword != null && !keyword.isEmpty()) {
-            matchesKeyword = group.getCode().toLowerCase().contains(keyword.toLowerCase());
-        }
-
-        if (spec != null && group.getSpecializationId() != null) {
-            matchesSpec = group.getSpecializationId().equals(spec.getId());
-        }
-
-        return matchesKeyword && matchesSpec;
+    private boolean matches(GroupDto g, String term) {
+        if (term == null || term.isEmpty())
+            return true;
+        String lower = term.toLowerCase();
+        return g.getCode() != null && g.getCode().toLowerCase().contains(lower);
     }
 
-    private void editGroup(GroupDto group) {
-        if (group == null)
-            return;
-        Notification.show("Editing group: " + group.getCode());
+    private void refreshGrid() {
+        loadSpecCache(); // Reload cache in case specs changed? Unlikely but safe.
+        grid.setItems(groupService.getAll());
     }
 
-    private void addGroup() {
+    private void populateForm(GroupDto value) {
+        this.currentGroup = value;
+        binder.readBean(value);
+        deleteButton.setVisible(true);
+    }
+
+    private void clearForm() {
+        this.currentGroup = null;
+        binder.readBean(new GroupDto());
         grid.asSingleSelect().clear();
-        Notification.show("Add group clicked");
+        deleteButton.setVisible(false);
+    }
+
+    private void save() {
+        GroupDto dto = new GroupDto();
+        if (this.currentGroup != null) {
+            // Need to preserve ID
+            dto.setId(this.currentGroup.getId());
+            // Note: GroupDto usually has setId. If immutable -> problem.
+            // Assuming it has setters based on binder usage.
+        }
+
+        try {
+            if (binder.writeBeanIfValid(dto)) {
+                groupService.save(dto);
+                refreshGrid();
+                clearForm();
+                Notification.show("Group saved successfully")
+                        .addThemeVariants(NotificationVariant.LUMO_SUCCESS);
+            }
+        } catch (Exception e) {
+            Notification.show("Error saving: " + e.getMessage())
+                    .addThemeVariants(NotificationVariant.LUMO_ERROR);
+        }
+    }
+
+    private void delete() {
+        if (currentGroup == null)
+            return;
+        try {
+            groupService.delete(currentGroup.getId());
+            refreshGrid();
+            clearForm();
+            Notification.show("Group deleted")
+                    .addThemeVariants(NotificationVariant.LUMO_SUCCESS);
+        } catch (Exception e) {
+            Notification.show("Cannot delete: " + e.getMessage())
+                    .addThemeVariants(NotificationVariant.LUMO_ERROR);
+        }
     }
 }
